data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_1999.wast
;; 10. **Test Description**: Test `if` statement with mixed `instr*`, followed by `br_table` instruction targeting an empty index set.     - **Constraint**: Validate that the flow correctly handles an impossible branch scenario within `if` branches.     - **Relation to Edge Case**: Confirms the system's robustness against scenarios where targets do not provide executable paths, ensuring no undefined behavior.

(assert_invalid
  (module (func $if-with-unreachable-branch
    (i32.const 1) 
    (if (then 
          (i32.const 1) 
          (br_table 0 1 2)
        ) 
        (else 
          (i32.const 0)
        )
    )
  ))
  "type mismatch"
)